--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <div class="loader">
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+    </div>
     <header>
         <div class="container">
             <nav class="flex j-sb a-center">
@@ -40,7 +45,7 @@
                         <a href="#contact" class="btn text-center">Contact Me</a>
                     </div>
                     <div class="col-6 col-t-12">
-                        <img src="./img/profile.png" alt="Aditya Gupta Pic" class="img-resp">
+                        <img src="./img/profile.webp" alt="Aditya Gupta Pic" class="img-resp profile-img">
                     </div>
                 </div>
             </div>
