Added favicon, optimized image and enhanced performance

--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="Portfolio icon" href="./img/favicon.png" type="image/x-icon">
     <title>Aditya Gupta | Frontend Developer Portfolio</title>
     <meta name="description" content="Welcome to the personal portfolio of Aditya Gupta, a passionate frontend developer. Showcasing modern, responsive, and interactive web designs built with clean code and creativity.">
+    
+    <link rel="preload" href="./img/profile.webp" as="image">
+
+    <!-- Google font -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"></noscript>
+
     <!-- Font Awesome Link -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" /></noscript>
+    
     <!-- Custom Stylesheet -->
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -103,7 +114,7 @@
                             <div class="col-4 col-t-6 col-p-12">
                                 <div class="portfolio-item">
                                     <div class="img-container">
-                                        <img src="./img/projects/bluerex.png" alt="BlueRex" class="img-resp" width="500" height="244">
+                                        <img src="./img/projects/bluerex.png" alt="BlueRex" class="img-resp" width="500" height="244" loading="lazy">
                                     </div>
                                     <div class="project-links flex-col a-center j-center gap-1">
                                         <h3>Project Links</h3>
@@ -117,7 +128,7 @@
                             <div class="col-4 col-t-6 col-p-12">
                                 <div class="portfolio-item">
                                     <div class="img-container">
-                                        <img src="./img/projects/coffee-time.png" alt="Coffee Time" class="img-resp" width="500" height="244">
+                                        <img src="./img/projects/coffee-time.png" alt="Coffee Time" class="img-resp" width="500" height="244" loading="lazy">
                                     </div>
                                     <div class="project-links flex-col a-center j-center gap-1">
                                         <h3>Project Links</h3>
@@ -131,7 +142,7 @@
                             <div class="col-4 col-t-6 col-p-12">
                                 <div class="portfolio-item">
                                     <div class="img-container">
-                                        <img src="./img/projects/deliver.png" alt="Deliver" class="img-resp" width="500" height="244">
+                                        <img src="./img/projects/deliver.png" alt="Deliver" class="img-resp" width="500" height="244" loading="lazy">
                                     </div>
                                     <div class="project-links flex-col a-center j-center gap-1">
                                         <h3>Project Links</h3>
@@ -145,7 +156,7 @@
                             <div class="col-4 col-t-6 col-p-12">
                                 <div class="portfolio-item">
                                     <div class="img-container">
-                                        <img src="./img/projects/dream-dine.png" alt="Dream Dine" class="img-resp" width="500" height="244">
+                                        <img src="./img/projects/dream-dine.png" alt="Dream Dine" class="img-resp" width="500" height="244" loading="lazy">
                                     </div>
                                     <div class="project-links flex-col a-center j-center gap-1">
                                         <h3>Project Links</h3>
@@ -159,7 +170,7 @@
                             <div class="col-4 col-t-6 col-p-12">
                                 <div class="portfolio-item">
                                     <div class="img-container">
-                                        <img src="./img/projects/github-id.png" alt="Github Identity Card" class="img-resp" width="500" height="244">
+                                        <img src="./img/projects/github-id.png" alt="Github Identity Card" class="img-resp" width="500" height="244" loading="lazy">
                                     </div>
                                     <div class="project-links flex-col a-center j-center gap-1">
                                         <h3>Project Links</h3>
@@ -173,7 +184,7 @@
                             <div class="col-4 col-t-6 col-p-12">
                                 <div class="portfolio-item">
                                     <div class="img-container">
-                                        <img src="./img/projects/trendy.png" alt="Trendy" class="img-resp" width="500" height="244">
+                                        <img src="./img/projects/trendy.png" alt="Trendy" class="img-resp" width="500" height="244" loading="lazy">
                                     </div>
                                     <div class="project-links flex-col a-center j-center gap-1">
                                         <h3>Project Links</h3>
